apps/kagent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kagent-cms-ui
spec:
  ingressClassName: public
  rules:
    - host: purdue-af-kagent.geddes.rcac.purdue.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kagent-cms-ui
                port:
                  number: 8080
